# simple_docker_runtime

./: .gitignore  Dockerfile  README.md  deploy_and_start.sh  pyproject.toml
simplerun/: __init__.py  bash.py  main.py
simplerun/core/: __init__.py  logger.py  schema.py
simplerun/events/: event.py
simplerun/events/action/: action.py  commands.py  files.py
simplerun/events/observation/: commands.py  error.py  files.py  observation.py
simplerun/events/serialization/: event.py
simplerun/plugins/: requirement.py
simplerun/plugins/agent_skills/: __init__.py
simplerun/plugins/jupyter/: __init__.py  execute_server.py
simplerun/plugins/vscode/: __init__.py
simplerun/utils/file/: files.py
tests/: test_agent_skills.py  test_bash_parsing.py  test_bash_ps1_metadata.py  test_bash_session.py  test_file_viewer.py  test_fileops.py  test_system_stats.py
